counter-app/k8s/pgadmin/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-pgadmin
  labels:
    app: counter-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-pgadmin
  template:
    metadata:
      labels:
        app: counter-pgadmin
    spec:
      containers:
        - name: counter-pgadmin
          image: ghcr.io/modul-i-ch-109/pgadmin4:latest
          ports:
            - containerPort: 5050
