counter-app/k8s/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-pgadmin
spec:
  selector:
    app: counter-pgadmin
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
