counter-app/k8s/pgadmin/pgadmin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-pgadmin
  labels:
    app: counter-pgadmin
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 5050
  to:
    kind: Service
    name: counter-pgadmin
